# CPP-Calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  calculator.h  main.cpp  test.cpp
src/: calculator.cpp  calculator.h  main.cpp  test.cpp
